--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-06 16:24+0200\n"
+"PO-Revision-Date: 2025-07-06 19:02+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -2334,8 +2334,8 @@ msgstr "Kopiera originalmeddelandet till Bilagekarantän"
 #: pve-manager/www/manager6/dc/ClusterEdit.js:61
 msgid "Copy the Join Information here and use it on the node you want to add."
 msgstr ""
-"Kopiera Join Information här och använd den på den nod som du vill lägga "
-"till."
+"Kopiera anslutningsinformation här och använd den på den nod som du vill "
+"lägga till."
 
 #: pve-manager/www/manager6/ceph/Status.js:168
 msgid "Copy to Clipboard"
@@ -2443,7 +2443,7 @@ msgstr "Skapad"
 
 #: pve-manager/www/manager6/ceph/OSDDetails.js:254
 msgid "Creation time"
-msgstr "Tid att skapa"
+msgstr "Skapad den"
 
 #: pve-manager/www/manager6/ceph/StatusDetail.js:204
 msgid "Critical"
@@ -2496,7 +2496,7 @@ msgstr "Tjeckiska"
 
 #: pve-manager/www/manager6/grid/FirewallRules.js:983
 msgid "D.Port"
-msgstr "D.Port"
+msgstr "D.port"
 
 #: pve-manager/www/manager6/ceph/OSD.js:72
 msgid "DB Disk"
@@ -2611,11 +2611,11 @@ msgstr "Kontrollpanel"
 
 #: pmg-gui/js/Dashboard.js:14 proxmox-backup/www/Dashboard.js:14
 msgid "Dashboard Options"
-msgstr "Alternativ för instrumentpanel"
+msgstr "Alternativ för kontrollpanel"
 
 #: pve-manager/www/manager6/window/Settings.js:172
 msgid "Dashboard Storages"
-msgstr "Förvaring på instrumentpanelen"
+msgstr "Kontrollpanelens lagringar"
 
 #: pve-manager/www/manager6/node/ZFS.js:130
 msgid "Data Devs"
@@ -2631,7 +2631,7 @@ msgstr "Nivå för datasynkronisering"
 
 #: pmg-gui/js/ClamAVDatabase.js:10
 msgid "Database Mirror"
-msgstr "Spegel för databas"
+msgstr "Databasspegling"
 
 #: pve-manager/www/manager6/dc/Config.js:19
 #: pve-manager/www/manager6/form/IPRefSelector.js:71
@@ -2668,7 +2668,7 @@ msgstr "Alternativ för datalager"
 
 #: proxmox-backup/www/dashboard/DataStoreStatistics.js:56
 msgid "Datastore Usage"
-msgstr "Användning av datalager"
+msgstr "Datalageranvändning"
 
 #: proxmox-backup/www/datastore/DataStoreListSummary.js:54
 #: proxmox-backup/www/datastore/Summary.js:75
@@ -2701,11 +2701,11 @@ msgstr "Datum"
 #: proxmox-widget-toolkit/src/form/RRDTypeSelector.js:22
 #: proxmox-widget-toolkit/src/form/RRDTypeSelector.js:24
 msgid "Day"
-msgstr "Dygn"
+msgstr "Dag"
 
 #: proxmox-backup/www/config/VerifyView.js:219
 msgid "Days"
-msgstr "Dygn"
+msgstr "Dagar"
 
 #: proxmox-backup/www/Dashboard.js:31
 msgid "Days to show"
@@ -2763,7 +2763,7 @@ msgstr "Standard (80%)"
 
 #: proxmox-backup/www/window/NotifyOptions.js:6
 msgid "Default (Always)"
-msgstr "Standard (alltid)"
+msgstr "Standard (Alltid)"
 
 #: proxmox-backup/www/window/NotifyOptions.js:18
 msgid "Default (Errors)"
@@ -2810,15 +2810,16 @@ msgstr "Standardalternativ för synkronisering"
 msgid "Default sync options can be set by editing the realm."
 msgstr ""
 "Standardalternativ för synkronisering kan ställas in genom att redigera "
-"sfären."
+"realmen."
 
 #: proxmox-widget-toolkit/src/window/AuthEditLDAP.js:394
 msgid "Default user classes: inetorgperson, posixaccount, person, user"
-msgstr "Standardanvändarklasser: inetorgperson, posixaccount, person, user"
+msgstr ""
+"Användarklasser som standard: inetorgperson, posixaccount, person, user"
 
 #: proxmox-widget-toolkit/src/panel/SendmailEditPanel.js:71
 msgid "Defaults to datacenter configuration, or root@$hostname"
-msgstr "Standardinställning är datacenterkonfiguration, eller root@$hostname"
+msgstr "Standardvärde till datacenterkonfiguration, eller root@$värdnamn"
 
 #: pve-manager/www/manager6/dc/OptionView.js:179
 msgid "Defaults to origin"
@@ -2864,7 +2865,7 @@ msgstr "Ta bort ögonblicksbild"
 
 #: proxmox-backup/www/window/NamespaceEdit.js:73
 msgid "Delete all Backup Groups"
-msgstr "Ta bort alla Backup-grupper"
+msgstr "Ta bort alla säkerhetskopiegrupper"
 
 #: pmg-gui/js/PostfixQShape.js:102
 msgid "Delete all Messages"
@@ -2872,7 +2873,7 @@ msgstr "Ta bort alla meddelanden"
 
 #: pve-manager/www/manager6/node/Certificates.js:269
 msgid "Delete custom certificate and switch to generated one?"
-msgstr "Ta bort anpassat certifikat och byt till genererat?"
+msgstr "Ta bort anpassat certifikat och byt till det genererade?"
 
 #: pve-manager/www/manager6/storage/PBSEdit.js:295
 msgid "Delete existing encryption key"
@@ -2887,7 +2888,7 @@ msgid ""
 "Deleting or replacing the encryption key will break restoring backups "
 "created with it!"
 msgstr ""
-"Om du raderar eller byter ut krypteringsnyckeln går det inte att återställa "
+"Om du tar bort eller byter ut krypteringsnyckeln går det inte att återställa "
 "säkerhetskopior som skapats med den!"
 
 #: pmg-gui/js/AttachmentQuarantine.js:137
@@ -2941,7 +2942,7 @@ msgstr "Beskrivning av jobbet"
 
 #: pve-manager/www/manager6/grid/FirewallRules.js:400
 msgid "Dest. port"
-msgstr "Avsändande port"
+msgstr "Dest.port"
 
 #: pmg-gui/js/MailProxyTLSDestinations.js:34
 #: pmg-gui/js/MailProxyTLSDestinations.js:76
@@ -2987,7 +2988,7 @@ msgstr "Förstör all data (farligt!)"
 
 #: pve-manager/www/manager6/Utils.js:2075
 msgid "Destroy image from unknown guest"
-msgstr "Förstör bild från okänd gäst"
+msgstr "Förstör avbildning från okänd gäst"
 
 #: pve-manager/www/manager6/window/SafeDestroyGuest.js:24
 msgid "Destroy unreferenced disks owned by guest"
@@ -2996,7 +2997,7 @@ msgstr "Förstör icke-refererade diskar som ägs av gäst"
 #: pve-manager/www/manager6/lxc/Resources.js:237
 #: pve-manager/www/manager6/qemu/HardwareView.js:491
 msgid "Detach"
-msgstr "Koppla loss"
+msgstr "Koppla från"
 
 #: pve-manager/www/manager6/node/ZFS.js:291 proxmox-backup/www/ZFSList.js:117
 msgid "Detail"
@@ -3039,7 +3040,7 @@ msgstr "Enhetsklass"
 
 #: pve-manager/www/manager6/qemu/PCIEdit.js:302
 msgid "Device ID"
-msgstr "Enhets ID"
+msgstr "Enhets id"
 
 #: proxmox-widget-toolkit/src/Utils.js:1321
 msgid "Device Ineligible"
@@ -3100,7 +3101,7 @@ msgstr "Katalogmappningar"
 #: pve-manager/www/manager6/qemu/VirtiofsEdit.js:42
 msgid ""
 "Directory Mappings can be managed under Datacenter -> Directory Mappings"
-msgstr "Directory Mappings kan hanteras under Datacenter -> Directory Mappings"
+msgstr "Katalogmappningar kan hanteras under Datacenter -> Katalogmappningar"
 
 #: pve-manager/www/manager6/Utils.js:2031 proxmox-backup/www/Utils.js:409
 msgid "Directory Storage"
@@ -3113,7 +3114,7 @@ msgstr "Inaktivera"
 
 #: pve-manager/www/manager6/sdn/zones/EvpnEdit.js:81
 msgid "Disable ARP-nd Suppression"
-msgstr "Inaktivera ARP-nd-undertryckning"
+msgstr "Inaktivera undertryckning av ARP-nd"
 
 #: pmg-gui/js/MailProxyRelaying.js:34
 msgid "Disable MX lookup (SMTP)"
@@ -3166,7 +3167,7 @@ msgstr "Frånkopplad"
 #: pve-manager/www/manager6/window/GuestImport.js:660
 #: proxmox-backup/www/window/CreateDirectory.js:21
 msgid "Disk"
-msgstr "Hårddisk"
+msgstr "Disk"
 
 #: pve-manager/www/manager6/qemu/HardwareView.js:476
 msgid "Disk Action"
@@ -3224,7 +3225,7 @@ msgstr "Använd inte någon media"
 
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:14
 msgid "Do you want to reset {0} to its default settings?"
-msgstr "Vill du återställa {0} till standardinställningarna?"
+msgstr "Vill du återställa {0} till dess standardinställningar?"
 
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:120
 msgid "Do you want to send a test notification to '{0}'?"
@@ -3241,7 +3242,7 @@ msgstr "Ser inte ut som en giltig återställningsnyckel"
 
 #: pve-manager/www/manager6/dc/ClusterEdit.js:312
 msgid "Does not seem like a valid encoded Cluster Information!"
-msgstr "Verkar inte som en giltig kodad Cluster Information!"
+msgstr "Ser inte ut som en giltig kodad klusterinformation!"
 
 #: proxmox-widget-toolkit/src/panel/ACMEDomains.js:386
 #: proxmox-widget-toolkit/src/window/ACMEDomains.js:6
@@ -3263,7 +3264,7 @@ msgstr "Domän"
 
 #: pve-manager/www/manager6/dc/OptionView.js:220
 msgid "Domain Lockdown (e.g., {0})"
-msgstr "Låsning av domän (t.ex. {0})"
+msgstr "Nedlåsning av domän (t.ex. {0})"
 
 #: pve-manager/www/manager6/window/ScheduleSimulator.js:151
 msgid "Done"
@@ -3412,12 +3413,12 @@ msgstr "E-postadress"
 
 #: pmg-gui/js/LDAPConfig.js:302
 msgid "E-Mail addresses of '{0}'"
-msgstr "E-postadresser till '{0}'"
+msgstr "E-postadresser för '{0}'"
 
 #: proxmox-widget-toolkit/src/window/AuthEditLDAP.js:350
 #: pve-manager/www/manager6/dc/AuthEditLDAP.js:245
 msgid "E-Mail attribute"
-msgstr "E-post-attribut"
+msgstr "E-postattribut"
 
 #: pve-manager/www/manager6/node/ACME.js:212
 msgid "EAB Key"
@@ -3455,11 +3456,11 @@ msgstr ""
 
 #: pmg-gui/js/SpamQuarantineOptions.js:60
 msgid "EMail 'From:'"
-msgstr "EMail 'Från:’"
+msgstr "E-post 'Från:’"
 
 #: pmg-gui/js/LDAPConfig.js:144
 msgid "EMail attribute name(s)"
-msgstr "EMail attribut namn(en)"
+msgstr "Attributnamn för e-post"
 
 #: proxmox-widget-toolkit/src/Utils.js:649
 #: proxmox-widget-toolkit/src/node/DNSView.js:49
@@ -3563,7 +3564,7 @@ msgstr "Redigera taggar"
 
 #: proxmox-backup/www/Dashboard.js:231
 msgid "Edit dashboard settings"
-msgstr "Redigera inställningar för instrumentpanelen"
+msgstr "Redigera inställningar för kontrollpanel"
 
 #: pve-manager/www/manager6/storage/PBSEdit.js:261
 msgid "Edit existing encryption key (dangerous!)"
@@ -3576,7 +3577,7 @@ msgstr "Redigera anteckningar"
 #: pmg-gui/js/ActionList.js:148
 #: pve-manager/www/manager6/form/CalendarEvent.js:6
 msgid "Editable"
-msgstr "Kan ändras"
+msgstr "Redigerbar"
 
 #: pmg-gui/js/ServerStatus.js:154
 msgid "Egress"
