--- a/Shotcut/shotcut_sv.po
+++ b/Shotcut/shotcut_sv.po
@@ -571,7 +571,7 @@ msgstr "Upplösning"
 #: ../src/widgets/avformatproducerwidget.ui:424
 msgctxt "AvformatProducerWidget|"
 msgid "Frame rate"
-msgstr "Bildhastighet"
+msgstr "Bildfrekvens"
 
 #: ../src/widgets/avformatproducerwidget.ui:389
 msgctxt "AvformatProducerWidget|"
@@ -725,7 +725,7 @@ msgstr "Exportera GPX"
 #: ../src/widgets/avformatproducerwidget.ui:1121
 msgctxt "AvformatProducerWidget|"
 msgid "View Bitrate..."
-msgstr "Visa bitrate..."
+msgstr "Visa bitfrekvens..."
 
 #: ../src/widgets/avformatproducerwidget.ui:1124
 msgctxt "AvformatProducerWidget|"
@@ -790,7 +790,7 @@ msgstr "Skapa Proxy"
 #: ../src/widgets/avformatproducerwidget.ui:1085
 msgctxt "AvformatProducerWidget|"
 msgid "Delete Proxy"
-msgstr "Ta bort Proxy"
+msgstr "Ta bort proxy"
 
 #: ../src/widgets/avformatproducerwidget.ui:1090
 msgctxt "AvformatProducerWidget|"
@@ -1076,7 +1076,7 @@ msgstr "Frekvens"
 msgctxt "BlipProducerWidget|"
 msgid " second(s)"
 msgid_plural " second(s)"
-msgstr[0] " sekunder"
+msgstr[0] " sekund"
 msgstr[1] " sekunder"
 
 #: ../src/widgets/blipproducerwidget.cpp:89
@@ -1282,7 +1282,7 @@ msgstr ""
 #: ../src/widgets/countproducerwidget.ui:179
 msgctxt "CountProducerWidget|"
 msgid "Drop Frame"
-msgstr "Tappad bildruta"
+msgstr "Släppt bildruta"
 
 #: ../src/widgets/countproducerwidget.ui:182
 msgctxt "CountProducerWidget|"
@@ -1435,7 +1435,7 @@ msgstr "x"
 #: ../src/dialogs/customprofiledialog.ui:348
 msgctxt "CustomProfileDialog|"
 msgid "Frames/sec"
-msgstr "Bildrutor/sek"
+msgstr "Bildrutor/s"
 
 #: ../src/dialogs/customprofiledialog.ui:449
 msgctxt "CustomProfileDialog|"
@@ -1454,7 +1454,7 @@ msgstr ""
 #: ../src/dialogs/customprofiledialog.cpp:134
 msgctxt "CustomProfileDialog|"
 msgid "Video Mode Frames/sec"
-msgstr "Videoläge bildrutor/sek"
+msgstr "Videoläge bildrutor/s"
 
 #: ../src/widgets/decklinkproducerwidget.ui:14
 msgctxt "DecklinkProducerWidget|"
@@ -1531,7 +1531,7 @@ msgstr "Varaktighet"
 #: ../src/dialogs/editmarkerdialog.cpp:31
 msgctxt "EditMarkerDialog|"
 msgid "Edit Marker"
-msgstr "Redigera Markör"
+msgstr "Redigera markör"
 
 #: ../src/widgets/editmarkerwidget.cpp:46
 msgctxt "EditMarkerWidget|"
@@ -1681,7 +1681,7 @@ msgstr "Upplösning"
 #: ../src/docks/encodedock.ui:569
 msgctxt "EncodeDock|"
 msgid "Frames/sec"
-msgstr "Bildrutor/sek"
+msgstr "Bildrutor/s"
 
 #: ../src/docks/encodedock.ui:916
 msgctxt "EncodeDock|"
@@ -2128,7 +2128,7 @@ msgstr "Lägg till exporteringsinställning"
 #: ../src/docks/encodedock.cpp:2131
 msgctxt "EncodeDock|"
 msgid "Delete Preset"
-msgstr "Radera förinställning"
+msgstr "Ta bort förinställning"
 
 #: ../src/docks/encodedock.cpp:2132
 #, qt-format
@@ -2230,7 +2230,7 @@ msgstr "Export avbruten"
 #: ../src/docks/encodedock.cpp:2485
 msgctxt "EncodeDock|"
 msgid "Export Frames/sec"
-msgstr "Exportera bildrutor/sek"
+msgstr "Exportera bildrutor/s"
 
 #: ../src/jobs/encodejob.cpp:46
 msgctxt "EncodeJob|"
@@ -2323,7 +2323,7 @@ msgstr "%1 fildatum"
 #: ../src/dialogs/filedatedialog.cpp:102
 msgctxt "FileDateDialog|"
 msgid "Current Value"
-msgstr "Nuvarande Värde"
+msgstr "Aktuellt värde"
 
 #: ../src/dialogs/filedatedialog.cpp:106
 msgctxt "FileDateDialog|"
@@ -2378,7 +2378,7 @@ msgstr "Hem"
 #: ../src/docks/filesdock.cpp:503
 msgctxt "FilesDock|"
 msgid "Current Project"
-msgstr "Pågående projekt"
+msgstr "Aktuellt projekt"
 
 #: ../src/docks/filesdock.cpp:504
 msgctxt "FilesDock|"
@@ -2857,7 +2857,7 @@ msgstr "Klistra in filtren från urklippet"
 #: ../src/widgets/frameratewidget.cpp:74
 msgctxt "FrameRateWidget|"
 msgid "Convert Frames/sec"
-msgstr "Konvertera Frames/sek"
+msgstr "Konvertera bildrutor/s"
 
 #: ../src/widgets/glaxnimateproducerwidget.cpp:642
 msgctxt "GlaxnimateIpcServer|"
@@ -3066,7 +3066,7 @@ msgstr "Skapa Proxy"
 #: ../src/widgets/imageproducerwidget.ui:331
 msgctxt "ImageProducerWidget|"
 msgid "Delete Proxy"
-msgstr "Ta bort Proxy"
+msgstr "Ta bort proxy"
 
 #: ../src/widgets/imageproducerwidget.ui:336
 msgctxt "ImageProducerWidget|"
@@ -4063,7 +4063,7 @@ msgstr "Layout"
 #: ../src/mainwindow.ui:117
 msgctxt "MainWindow|"
 msgid "&Edit"
-msgstr "&Redigera"
+msgstr "R&edigera"
 
 #: ../src/mainwindow.ui:127
 msgctxt "MainWindow|"
@@ -4138,7 +4138,7 @@ msgstr "Verktygsfält"
 #: ../src/mainwindow.ui:378
 msgctxt "MainWindow|"
 msgid "&Open File..."
-msgstr "&Öppna fil..."
+msgstr "Ö&ppna fil..."
 
 #: ../src/mainwindow.ui:392
 msgctxt "MainWindow|"
@@ -4203,7 +4203,7 @@ msgstr "Jobbprioritering"
 #: ../src/mainwindow.ui:478
 msgctxt "MainWindow|"
 msgid "&Undo"
-msgstr "&Ångra"
+msgstr "Å&ngra"
 
 #: ../src/mainwindow.ui:487
 msgctxt "MainWindow|"
@@ -4806,7 +4806,7 @@ msgstr "EDL..."
 #: ../src/mainwindow.ui:943
 msgctxt "MainWindow|"
 msgid "Frame..."
-msgstr "Ram..."
+msgstr "Bildruta..."
 
 #: ../src/mainwindow.ui:957
 msgctxt "MainWindow|"
@@ -5275,7 +5275,7 @@ msgstr ""
 #: ../src/mainwindow.cpp:3925
 msgctxt "MainWindow|"
 msgid "Exit Full Screen"
-msgstr "Avsluta fullskärm"
+msgstr "Avsluta helskärm"
 
 #: ../src/mainwindow.cpp:5596
 msgctxt "MainWindow|"
@@ -5740,12 +5740,12 @@ msgstr "MLT XML"
 #: ../src/videowidget.cpp:196
 msgctxt "Mlt::VideoWidget|"
 msgid "You cannot drag from Project."
-msgstr "Du kan inte dra från Project."
+msgstr "Du kan inte dra från projekt."
 
 #: ../src/videowidget.cpp:199
 msgctxt "Mlt::VideoWidget|"
 msgid "You cannot drag a non-seekable source"
-msgstr "Du kan inte dra en icke sökbar källa"
+msgstr "Du kan inte dra en icke-sökbar källa"
 
 #: ../src/widgets/mltclipproducerwidget.cpp:47
 msgctxt "MltClipProducerWidget|"
@@ -5760,7 +5760,7 @@ msgstr "Bildförhållande"
 #: ../src/widgets/mltclipproducerwidget.cpp:59
 msgctxt "MltClipProducerWidget|"
 msgid "Frame rate"
-msgstr "Bildhastighet"
+msgstr "Bildfrekvens"
 
 #: ../src/widgets/mltclipproducerwidget.cpp:65
 msgctxt "MltClipProducerWidget|"
@@ -5849,7 +5849,7 @@ msgstr "Från start"
 #: ../src/qml/modules/Shotcut/Controls/MotionTrackerDialog.qml:128
 msgctxt "MotionTrackerDialog|"
 msgid "Current position"
-msgstr "Nuvarande position"
+msgstr "Aktuell position"
 
 #: ../src/qml/modules/Shotcut/Controls/MotionTrackerDialog.qml:142
 msgctxt "MotionTrackerDialog|"
@@ -6368,7 +6368,7 @@ msgstr "Tysta ljudet"
 #: ../src/player.cpp:196
 msgctxt "Player|"
 msgid "Current position"
-msgstr "Nuvarande position"
+msgstr "Aktuell position"
 
 #: ../src/player.cpp:202
 msgctxt "Player|"
@@ -6648,7 +6648,7 @@ msgstr "Spelare"
 #: ../src/player.cpp:765
 msgctxt "Player|"
 msgid "Focus Player"
-msgstr "Fokus spelare"
+msgstr "Fokusera spelare"
 
 #: ../src/player.cpp:770
 msgctxt "Player|"
@@ -7279,7 +7279,7 @@ msgstr "Misslyckades med att öppna "
 #: ../src/docks/playlistdock.cpp:1395
 msgctxt "PlaylistDock|"
 msgid "Dropped Files"
-msgstr "Tappade filer"
+msgstr "Släppta filer"
 
 #: ../src/docks/playlistdock.cpp:1857
 msgctxt "PlaylistDock|"
@@ -7431,7 +7431,7 @@ msgstr "Avbryt"
 #: ../src/qml/modules/Shotcut/Controls/Preset.qml:165
 msgctxt "Preset|"
 msgid "Delete Preset"
-msgstr "Radera förinställning"
+msgstr "Ta bort förinställning"
 
 #: ../src/qml/modules/Shotcut/Controls/Preset.qml:175
 #, qt-format
@@ -8519,7 +8519,7 @@ msgstr "Namn:"
 #: ../src/widgets/servicepresetwidget.cpp:173
 msgctxt "ServicePresetWidget|"
 msgid "Delete Preset"
-msgstr "Radera förinställning"
+msgstr "Ta bort förinställning"
 
 #: ../src/widgets/servicepresetwidget.cpp:174
 #, qt-format
@@ -9217,7 +9217,7 @@ msgstr "Kontroller för undertexter"
 #: ../src/docks/subtitlesdock.cpp:217
 msgctxt "SubtitlesDock|"
 msgid "Subtitles Menu"
-msgstr "Meny för undertexter"
+msgstr "Undertextmeny"
 
 #: ../src/docks/subtitlesdock.cpp:268
 msgctxt "SubtitlesDock|"
@@ -9227,7 +9227,7 @@ msgstr "Föregående"
 #: ../src/docks/subtitlesdock.cpp:270
 msgctxt "SubtitlesDock|"
 msgid "Current"
-msgstr "Nuvarande"
+msgstr "Aktuell"
 
 #: ../src/docks/subtitlesdock.cpp:272
 msgctxt "SubtitlesDock|"
@@ -10069,7 +10069,7 @@ msgstr "Nästa markör"
 #: ../src/docks/timelinedock.cpp:1012
 msgctxt "TimelineDock|"
 msgid "Delete Marker"
-msgstr "Radera Markör"
+msgstr "Ta bort markör"
 
 #: ../src/docks/timelinedock.cpp:1023
 msgctxt "TimelineDock|"
@@ -10344,7 +10344,7 @@ msgstr "Misslyckades med att öppna "
 #: ../src/docks/timelinedock.cpp:3162
 msgctxt "TimelineDock|"
 msgid "Dropped Files"
-msgstr "Tappade filer"
+msgstr "Släppta filer"
 
 #: ../src/docks/timelinedock.cpp:3207
 msgctxt "TimelineDock|"
@@ -10444,7 +10444,7 @@ msgstr "Tidslinje"
 #: ../src/widgets/timelinepropertieswidget.ui:104
 msgctxt "TimelinePropertiesWidget|"
 msgid "Frame rate"
-msgstr "Bildhastighet"
+msgstr "Bildfrekvens"
 
 #: ../src/widgets/timelinepropertieswidget.ui:246
 msgctxt "TimelinePropertiesWidget|"
@@ -10826,7 +10826,7 @@ msgstr "Åsidosätt bildfrekvens"
 #: ../src/dialogs/transcodedialog.ui:229
 msgctxt "TranscodeDialog|"
 msgid "Frames/sec"
-msgstr "Bildrutor/sek"
+msgstr "Bildrutor/s"
 
 #: ../src/dialogs/transcodedialog.ui:158
 msgctxt "TranscodeDialog|"
@@ -11076,7 +11076,7 @@ msgstr "Video4Linux"
 #: ../src/widgets/video4linuxwidget.ui:82
 msgctxt "Video4LinuxWidget|"
 msgid "fps"
-msgstr "fps"
+msgstr "bilder/s"
 
 #: ../src/widgets/video4linuxwidget.ui:102
 msgctxt "Video4LinuxWidget|"
@@ -11086,7 +11086,7 @@ msgstr "Höjd"
 #: ../src/widgets/video4linuxwidget.ui:115
 msgctxt "Video4LinuxWidget|"
 msgid "Frame rate"
-msgstr "Bildhastighet"
+msgstr "Bildfrekvens"
 
 #: ../src/widgets/video4linuxwidget.ui:125
 msgctxt "Video4LinuxWidget|"
@@ -11730,7 +11730,7 @@ msgstr "Fördröj"
 #: ../src/qml/filters/audio_delay/meta.qml:8
 msgctxt "meta|search keywords for the Delay audio filter"
 msgid "time echo"
-msgstr "tid eko"
+msgstr "tidseko"
 
 #: ../src/qml/filters/audio_expander/meta.qml:7
 msgctxt "meta|"
@@ -12322,7 +12322,7 @@ msgstr "Skala"
 #: ../src/qml/filters/rotate/meta.qml:33
 msgctxt "meta|"
 msgid "X offset"
-msgstr "X förskjutning"
+msgstr "X-förskjutning"
 
 #: ../src/qml/filters/rotate/meta.qml:37
 msgctxt "meta|"
@@ -12994,7 +12994,7 @@ msgstr "Choppy"
 #: ../src/qml/filters/choppy/meta.qml:7
 msgctxt "meta|search keywords for the Choppy video filter"
 msgid "fps framerate"
-msgstr "fps bildfrekvens"
+msgstr "bildfrekvens"
 
 #: ../src/qml/filters/choppy/meta.qml:19
 msgctxt "meta|"
@@ -13110,7 +13110,7 @@ msgstr "FOV"
 #: ../src/qml/filters/fisheye/meta.qml:22
 msgctxt "meta|"
 msgid "Fisheye"
-msgstr "Fisheye"
+msgstr "Fisköga"
 
 #: ../src/qml/filters/corners/meta.qml:22
 msgctxt "meta|"
@@ -13130,12 +13130,12 @@ msgstr "Hörn"
 #: ../src/qml/filters/corners/meta.qml:40
 msgctxt "meta|"
 msgid "Stretch X"
-msgstr "Sträcka X"
+msgstr "Sträck ut X"
 
 #: ../src/qml/filters/corners/meta.qml:47
 msgctxt "meta|"
 msgid "Stretch Y"
-msgstr "Stretch Y"
+msgstr "Sträck ut Y"
 
 #: ../src/qml/filters/corners/meta.qml:54
 msgctxt "meta|"
@@ -13443,7 +13443,7 @@ msgstr "Höjd"
 #: ../src/qml/filters/dropshadow/meta.qml:6
 msgctxt "meta|"
 msgid "Drop Shadow"
-msgstr "Skugga"
+msgstr "Släppskugga"
 
 #: ../src/qml/filters/dropshadow/meta.qml:7
 msgctxt "meta|search keywords for the Drop Shadow video filter"
@@ -14863,7 +14863,7 @@ msgstr ""
 #: ../src/qml/filters/audio_delay/ui.qml:88
 msgctxt "ui|"
 msgid "Feedback"
-msgstr "Feedback"
+msgstr "Återkoppling"
 
 #: ../src/qml/filters/audio_expander/ui.qml:73
 msgctxt "ui|"
@@ -15218,7 +15218,7 @@ msgstr "Om reverb"
 #: ../src/qml/filters/audio_swapchannels/ui.qml:55
 msgctxt "ui|"
 msgid "Swap"
-msgstr "Skifta"
+msgstr "Byt"
 
 #: ../src/qml/filters/audio_swapchannels/ui.qml:66
 msgctxt "ui|"
@@ -16065,7 +16065,7 @@ msgstr "FOV"
 #: ../src/qml/filters/fisheye/ui.qml:450
 msgctxt "ui|"
 msgid "Fisheye"
-msgstr "Fisheye"
+msgstr "Fisköga"
 
 #: ../src/qml/filters/lut3d/ui.qml:122 ../src/qml/filters/time_remap/ui.qml:403
 msgctxt "ui|"
@@ -16113,7 +16113,7 @@ msgstr "Hörn 4 X"
 #: ../src/qml/filters/corners/ui.qml:587
 msgctxt "ui|"
 msgid "Stretch X"
-msgstr "Sträcka X"
+msgstr "Sträck ut X"
 
 #: ../src/qml/filters/corners/ui.qml:645
 msgctxt "ui|"
@@ -16678,7 +16678,7 @@ msgstr "Tilldela"
 #: ../src/qml/filters/rotate/ui.qml:234
 msgctxt "ui|"
 msgid "X offset"
-msgstr "X förskjutning"
+msgstr "X-förskjutning"
 
 #: ../src/qml/filters/rotate/ui.qml:272
 msgctxt "ui|"
