--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-07 15:17+0200\n"
+"PO-Revision-Date: 2025-07-07 21:02+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -5274,13 +5274,12 @@ msgid "Important: Save your Encryption Key"
 msgstr "Viktigt: Spara din krypteringsnyckel"
 
 #: pve-manager/www/manager6/window/GuestImport.js:966
-#, fuzzy
 msgid ""
 "Importing an OVA temporarily requires extra space on the working storage "
 "while extracting the contained disks for further processing."
 msgstr ""
-"Import av en OVA kräver tillfälligt extra utrymme på fungerande lagringen "
-"medan de inneslutna diskarna extraheras för vidare bearbetning."
+"Import av en OVA kräver tillfälligt extra utrymme på den lagringen medan de "
+"inneslutna diskarna extraheras för vidare bearbetning."
 
 #: pmg-gui/js/Utils.js:114 pve-manager/www/manager6/ceph/StatusDetail.js:38
 msgid "In"
@@ -6059,9 +6058,8 @@ msgid "Log Rotation"
 msgstr "Loggrotation"
 
 #: pve-manager/www/manager6/window/FirewallLograteEdit.js:51
-#, fuzzy
 msgid "Log burst limit"
-msgstr "Begränsning av logguttag"
+msgstr "Begränsning av loggflöde"
 
 #: pve-manager/www/manager6/Utils.js:1772
 msgid "Log in as root to install."
@@ -7679,7 +7677,7 @@ msgstr "Notifieringsmatchningar"
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:119
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:132
 msgid "Notification Target Test"
-msgstr ""
+msgstr "Test för notifieringsmål"
 
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:60
 msgid "Notification Targets"
@@ -8727,13 +8725,11 @@ msgid "Prune Backups for '{0}' on Storage '{1}'"
 msgstr "Rensa säkerhetskopior för '{0}' på lagringen '{1}'"
 
 #: proxmox-backup/www/Utils.js:422 proxmox-backup/www/window/PruneJobEdit.js:12
-#, fuzzy
 msgid "Prune Job"
 msgstr "Rensningsjobb"
 
 #: proxmox-backup/www/config/PruneView.js:32
 #: proxmox-backup/www/window/NotifyOptions.js:126
-#, fuzzy
 msgid "Prune Jobs"
 msgstr "Rensningsjobb"
 
@@ -8744,7 +8740,6 @@ msgstr "Rensningsalternativ"
 
 #: proxmox-backup/www/window/DataStoreEdit.js:92
 #: proxmox-backup/www/window/PruneJobEdit.js:116
-#, fuzzy
 msgid "Prune Schedule"
 msgstr "Rensningsschema"
 
@@ -8755,16 +8750,14 @@ msgid "Prune group"
 msgstr "Rensa grupp"
 
 #: proxmox-backup/www/Utils.js:450
-#, fuzzy
 msgid "Prune job"
-msgstr "Rensa jobb"
+msgstr "Rensningsjobb"
 
 #: pve-manager/www/manager6/window/Backup.js:114
 msgid "Prune older backups afterwards"
 msgstr "Rensa äldre säkerhetskopior i efterhand"
 
 #: proxmox-backup/www/dashboard/TaskSummary.js:30
-#, fuzzy
 msgid "Prunes"
 msgstr "Rensningar"
 
@@ -10599,7 +10592,7 @@ msgstr "Hoppa över certifikatverifiering"
 #: proxmox-backup/www/window/VerifyAll.js:50
 #: proxmox-backup/www/window/VerifyJobEdit.js:109
 msgid "Skip Verified"
-msgstr "Hoppa över verifierad"
+msgstr "Hoppa över verifierade"
 
 #: pve-manager/www/manager6/lxc/MPEdit.js:336
 #: pve-manager/www/manager6/qemu/HDEdit.js:305
@@ -13931,7 +13924,7 @@ msgstr "obligatoriskt"
 
 #: proxmox-backup/www/config/NodeOptionView.js:43
 msgid "root@$hostname"
-msgstr "root@$vardnamn"
+msgstr "root@$hostname"
 
 #: proxmox-widget-toolkit/src/Utils.js:56
 msgid "running"
