--- a/Proxmox/proxmox_sv.po
+++ b/Proxmox/proxmox_sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: proxmox translations\n"
 "Report-Msgid-Bugs-To: <support@proxmox.com>\n"
 "POT-Creation-Date: 2025-06-04 19:10+0200\n"
-"PO-Revision-Date: 2025-07-07 21:02+0200\n"
+"PO-Revision-Date: 2025-07-08 08:47+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Swedish\n"
 "Language: sv\n"
@@ -1669,11 +1669,11 @@ msgstr "Ändringslogg"
 #: proxmox-backup/www/tape/window/ChangerEdit.js:8
 #: proxmox-backup/www/tape/window/DriveEdit.js:34
 msgid "Changer"
-msgstr "Ändrare"
+msgstr "Växlare"
 
 #: proxmox-backup/www/tape/TapeManagement.js:30
 msgid "Changers"
-msgstr "Ändrare"
+msgstr "Växlare"
 
 #: pve-manager/www/manager6/dc/OptionView.js:273
 msgid "Changing the ID breaks existing WebAuthn TFA entries."
@@ -3048,7 +3048,7 @@ msgstr "Enheten inte kvalificerad"
 
 #: pve-manager/www/manager6/lxc/Resources.js:398
 msgid "Device Passthrough"
-msgstr ""
+msgstr "Enhetsgenomströmning"
 
 #: pve-manager/www/manager6/lxc/DeviceEdit.js:53
 msgid "Device Path"
@@ -3221,7 +3221,7 @@ msgstr "Kryptera inte säkerhetskopior"
 
 #: pve-manager/www/manager6/qemu/CDEdit.js:116
 msgid "Do not use any media"
-msgstr "Använd inte någon media"
+msgstr "Använd inte något media"
 
 #: proxmox-widget-toolkit/src/panel/NotificationConfigView.js:14
 msgid "Do you want to reset {0} to its default settings?"
@@ -4241,7 +4241,7 @@ msgstr "Filåterställning"
 
 #: pve-manager/www/manager6/Utils.js:2046
 msgid "File Restore Download"
-msgstr ""
+msgstr "Ladda ner filåterställning"
 
 #: pve-manager/www/manager6/window/DownloadUrlToStorage.js:165
 #: pve-manager/www/manager6/window/UploadToStorage.js:203
@@ -4389,11 +4389,11 @@ msgstr "Flaggor"
 
 #: pve-manager/www/manager6/panel/BackupAdvancedOptions.js:205
 msgid "Fleecing"
-msgstr ""
+msgstr "Fleecing"
 
 #: pve-manager/www/manager6/panel/BackupAdvancedOptions.js:220
 msgid "Fleecing Storage"
-msgstr ""
+msgstr "Fleecing Storage"
 
 #: pve-manager/www/manager6/qemu/Options.js:129
 msgid "Floppy"
@@ -4414,12 +4414,12 @@ msgstr "Mappvy"
 #: pmg-gui/js/Settings.js:239 pve-manager/www/manager6/window/Settings.js:324
 #: proxmox-backup/www/window/Settings.js:239
 msgid "Font-Family"
-msgstr ""
+msgstr "Typsnittsfamilj"
 
 #: pmg-gui/js/Settings.js:247 pve-manager/www/manager6/window/Settings.js:332
 #: proxmox-backup/www/window/Settings.js:247
 msgid "Font-Size"
-msgstr ""
+msgstr "Typsnittsstorlek"
 
 #: proxmox-widget-toolkit/src/node/NetworkEdit.js:308
 msgid "For example, vmbr0.100, vmbr0, vlan0.100, vlan0"
@@ -4478,7 +4478,7 @@ msgstr "Formulärfält får inte skickas med ogiltiga värden"
 #: proxmox-backup/www/tape/DriveStatus.js:235
 #: proxmox-backup/www/tape/TapeInventory.js:227
 msgid "Format"
-msgstr ""
+msgstr "Formatera"
 
 #: proxmox-backup/www/Utils.js:412
 msgid "Format media"
@@ -4583,7 +4583,7 @@ msgstr "Från fil"
 #: proxmox-backup/www/tape/ChangerStatus.js:72
 #: proxmox-backup/www/tape/ChangerStatus.js:111
 msgid "From Slot"
-msgstr ""
+msgstr "Från plats"
 
 #: pve-manager/www/manager6/window/Restore.js:178
 msgid "From backup configuration"
@@ -4609,16 +4609,16 @@ msgstr "GB"
 
 #: proxmox-backup/www/Utils.js:859
 msgid "GC Access-Time Cutoff"
-msgstr ""
+msgstr "GC Access-Time Cutoff"
 
 #: proxmox-backup/www/datastore/OptionView.js:293
 msgid "GC Access-Time Cutoff (minutes)"
-msgstr ""
+msgstr "GC Access-Time Cutoff (minuter)"
 
 #: proxmox-backup/www/Utils.js:854
 #: proxmox-backup/www/datastore/OptionView.js:279
 msgid "GC Access-Time Support Check"
-msgstr ""
+msgstr "GC Access-Time Support Check"
 
 #: proxmox-backup/www/datastore/OptionView.js:301
 msgid "GC Cache Capacity (# chunks)"
@@ -5258,16 +5258,16 @@ msgstr "Importera gäst - {0}"
 
 #: pve-manager/www/manager6/window/GuestImport.js:568
 msgid "Import Working Storage"
-msgstr ""
+msgstr "Importlagring"
 
 #: proxmox-backup/www/tape/ChangerStatus.js:945
 #: proxmox-backup/www/tape/window/ChangerEdit.js:41
 msgid "Import-Export Slots"
-msgstr ""
+msgstr "Platser för Import-export"
 
 #: proxmox-backup/www/tape/ChangerConfig.js:132
 msgid "Import/Export Slots"
-msgstr ""
+msgstr "Platser för Import/export"
 
 #: pve-manager/www/manager6/storage/PBSEdit.js:10
 msgid "Important: Save your Encryption Key"
@@ -8958,7 +8958,7 @@ msgstr "Verifiera igen efter"
 
 #: proxmox-backup/www/window/SyncJobEdit.js:418
 msgid "Re-sync Corrupt"
-msgstr ""
+msgstr "Synkronisera korrupta igen"
 
 #: proxmox-backup/www/window/SyncJobEdit.js:422
 msgid "Re-sync snapshots, whose verification failed."
@@ -10606,11 +10606,11 @@ msgstr "Slavar"
 
 #: pve-manager/www/manager6/window/GuestImport.js:779
 msgid "Slot"
-msgstr ""
+msgstr "Plats"
 
 #: proxmox-backup/www/tape/ChangerStatus.js:712
 msgid "Slots"
-msgstr ""
+msgstr "Platser"
 
 #: proxmox-widget-toolkit/src/Utils.js:89
 msgid "Slovenian"
@@ -10702,7 +10702,7 @@ msgstr "Källans fjärr"
 
 #: proxmox-backup/www/tape/ChangerStatus.js:244
 msgid "Source Slot"
-msgstr ""
+msgstr "Källplats"
 
 #: pve-manager/www/manager6/window/GuestImport.js:570
 msgid "Source Storage"
@@ -11927,7 +11927,7 @@ msgstr "Till"
 #: proxmox-backup/www/tape/ChangerStatus.js:77
 #: proxmox-backup/www/tape/ChangerStatus.js:116
 msgid "To Slot"
-msgstr ""
+msgstr "Till plats"
 
 #: pve-manager/www/manager6/form/SpiceEnhancementSelector.js:32
 msgid ""
@@ -13415,16 +13415,16 @@ msgid ""
 "Without any keep option, the node's vzdump.conf or `keep-all` is used as "
 "fallback for backup jobs"
 msgstr ""
-"Utan något keep-alternativ används nodens vzdump.conf eller `keep-all` som "
-"reserv för säkerhetskopieringsjobb"
+"Om inget alternativ för att behålla finns, används nodens vzdump.conf eller "
+"`keep-all` som reserv för säkerhetskopieringsjobb"
 
 #: pve-manager/www/manager6/dc/Backup.js:450
 msgid ""
 "Without any keep option, the storage's configuration or node's vzdump.conf "
 "is used as fallback"
 msgstr ""
-"Utan något keep-alternativ används lagringens konfiguration eller nodens "
-"vzdump.conf som reserv"
+"Om inget alternativ för att behålla finns, används lagringskonfigurationen "
+"eller nodens vzdump.conf som reser"
 
 #: proxmox-widget-toolkit/src/window/DiskSmart.js:58
 msgid "Worst"
